src/test/test_cases/valid/function/higher_order_functions/mapBasic.wacc
# Output:
# [false, true] ;

# Program:

begin
    bool[] a = [true, false] ;
    println map ! a
end