src/test/test_cases/invalid/semanticErr/higher_order_functions/mapTypeErr.wacc
# Output:
# Semantic error ;

# Program:

begin
    println map - [true, false]
end